Improved option. The service is now single and returns its own response as a pair (Currency, Rate). Further transformations have been transferred to the mapper, I think this is logically correct, although it makes the mapper a little smarter than necessary.